--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,9 @@ serde = "1.0.145"
 serde_derive = "1.0.145"
 termion = "1.5.6"
 toml = "0.5.9"
+
+[profile.release]
+opt-level = 's'
+lto = true
+codegen-units = 1
+
